Fixed material command and greyed out recipes that can't be synthesised